Thu Sep 24 12:32:48 BST 2009  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_pump): When a source pipeline dies, make
	  sure to drain its output before discarding its output file
	  descriptor (Debian bug #548153). We still record the death to
	  avoid duplicate debugging messages.
	* NEWS: Document this.

Tue Sep 22 00:53:42 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_default_device): If the locale encoding is
	  ASCII, then use the ascii device even if preconv is available; it
	  will do a better job than producing UTF-8 output and then recoding
	  that to ASCII (Debian bug #547695).

Sat Sep 19 15:02:20 BST 2009  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Fri Sep 11 01:19:41 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/id.po: Fix syntax error.

Wed Sep  9 14:42:18 BST 2009  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (General options): Refer to the "Warnings" node
	  in 'info groff' for a list of available warning names (Debian bug
	  #545805).

Wed Sep  9 14:36:39 BST 2009  Arif E. Nugroho  <arif_endro@yahoo.com>

	* man/po4a/po/id.po: Update from Translation Project.

Tue Sep  8 19:14:23 BST 2009  Arif E. Nugroho  <arif_endro@yahoo.com>

	* po/id.po: Update from Translation Project.

Wed Aug 26 01:12:20 BST 2009  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.6.
	* po/man-db.pot, po/*.po: Update.

Wed Aug 26 01:07:16 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (display): Include the section in the hash key used
	  to determine whether a page has already been displayed.

Wed Aug 26 00:20:45 BST 2009  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c (compare_ids): Fix documentation of return
	  values.
	  (replace_if_necessary): Don't replace ULT_MAN or SO_MAN with
	  lesser ids just because the mtime is newer. (This still satisfies
	  Debian bug #490582, but doesn't cause the database to be rebuilt